# follow-the-leader

./: README.md  configuremodels.sh  package.xml  setup.py
follow_the_leader/: README.md  curve_fitting.py  image_processor.py  package.xml  point_tracker.py  setup.cfg  setup.py
follow_the_leader/config/: camera_d435.yaml  ftl_ur3.yaml  ftl_ur5e.yaml  linear_slider.yaml  logitech_c920.yaml  logitech_camera_info.yaml  modeling.rviz  view_robot.rviz  warehouse_ros.sqlite
follow_the_leader/follow_the_leader/: b_spline.py  bezier_sequence.py  blender_server_wrapper.py  branch.py  controller.py  controller_3d.py  curve_3d_model.py  curve_fitting.py  gui.py  image_processor.py  image_processor_old.py  io_manager.py  linear_slider.py  point_tracker.py  safety_plane.py  simple_state_manager.py  tree.py  visual_servoing.py  z_scan.py
follow_the_leader/follow_the_leader/analysis/: analyze_skeletonization_and_pips_tracking_from_bag.py  videos_from_bag_files.py  view_results.py  view_results_lab.py  view_results_real.py  visualize_results.py  vizlist.txt
follow_the_leader/follow_the_leader/networks/: flowgan.py  flownet.py  pips_model.py  pix2pix.py  yolov8.py
follow_the_leader/follow_the_leader/reconstruction/: b_spline.py  b_spline_cyl.py  basis_function.py  branch.py  geom_utils.py  tree.py
follow_the_leader/follow_the_leader/utils/: blender_server.py  branch_model.py  geometry_utils.py  ros_utils.py  run_experiments.py  view_results.py  yolov8.py
follow_the_leader/follow_the_leader/utils/box/: box.py
follow_the_leader/launch/: bag.launch.py  core_ftl_2d.launch.py  core_ftl_3d.launch.py  follow_the_leader.launch.py  follow_the_leader_abb.launch.py  follow_the_leader_sim.launch.py  pcl.launch.py  ur_startup.launch.py
follow_the_leader/networks/: flownet.py  pix2pix.py
follow_the_leader_msgs/: CMakeLists.txt  package.xml
follow_the_leader_msgs/msg/: BlenderParams.msg  ControllerParams.msg  ImageMaskPair.msg  NodeAction.msg  SchemaBranch.msg  SchemaBuds.msg  SchemaTree.msg  StateTransition.msg  States.msg  Tracked3DPointGroup.msg  Tracked3DPointResponse.msg  TrackedPointGroup.msg  TrackedPointRequest.msg  TreeModel.msg  VisualServoingRequest.msg
follow_the_leader_msgs/srv/: FollowPath.srv  Move2Pose.srv  Move2State.srv  Query3DPoints.srv
ftl_move_group_server/: CMakeLists.txt  package.xml
ftl_move_group_server/cfg/: view_robot.rviz
ftl_move_group_server/launch/: ftl_server.launch.py
ftl_move_group_server/src/: ftl_move_group_server.cpp
launch/: follow_the_leader.launch.py  ur_startup.launch.py
